--- a/index.html
+++ b/index.html
@@ -4,9 +4,27 @@
       <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="src/assets/styles/common.css">
+    <link rel="stylesheet" href="src/assets/styles/form-to-do-list.css">
+    <link rel="stylesheet" href="src/assets/styles/addTask.css">
     <title>To Do List</title>
 </head>
 <body>
-    
+    <div class="form-container">
+        <div class="form-inputs">
+            <input id="input-title" type="text" placeholder="Title...">
+            <input id="input-about" type="text" placeholder="About...">
+        </div>
+        <div class="button-add-task-container">
+            <button id="add-task-button"> <img src="src/assets/images/plus-button.svg" alt=""> </button>
+        </div>
+    </div>
+    <div class="zero-task-container"> 
+        
+    </div>
+    <div class="to-do-list-container">
+
+    </div>
 </body>
+<script src="src/scripts/add-task.js"></script>
 </html>
+
