add localstorage logic
Fix some interface bugs, add localstorage logic,  fix "delete" button

--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
 <head>
       <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="src/assets/styles/common.css">
-    <link rel="stylesheet" href="src/assets/styles/form-to-do-list.css">
-    <link rel="stylesheet" href="src/assets/styles/addTask.css">
+    <link rel="stylesheet" href="src/assets/styles/main.css">
     <title>To Do List</title>
 </head>
 <body>
@@ -21,7 +19,7 @@
     <div class="zero-task-container"> 
         
     </div>
-    <div class="to-do-list-container">
+    <div class="to-do-list-container" id="task-container">
 
     </div>
 </body>
